@@ -5,6 +5,7 @@ Revision history for Perl extension IPC::Shareable.
     - Added ability to use JSON as the serializer
     - Added 'tidy' option, cleans up unused nested data structure segments
     - Added ipcs()
+    - Added test to ensure we croak if data size is greater than segment size
 
 1.04    2021-06-28
     - Skip unspawn tests for perls with -Duselongdouble, as Storable is not
